Incorporated Benedikt's Feedback